--- a/SecureChat/app/build.gradle
+++ b/SecureChat/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.google.android.material:material:1.1.0-alpha09'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 }
